Add tmux cheatsheet, minor update to modifier key symbols

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 			<!-- <li><a href="cheatsheets/subl.html">Sublime</a></li> -->
 			<!-- <li><a href="cheatsheets/subl2.html">ST2</a></li> -->
 			<!-- <li><a href="cheatsheets/scapple.html">Scapple</a></li> -->
-                        <li><a href="cheatsheets/zsh.html">Zsh</a></li>
+                        <li><a href="cheatsheets/zsh.html">zsh</a></li>
+                        <li><a href="cheatsheets/tmux.html">tmux</a></li>
 		</ul>
 		<div id="container"></div>
 	</div>
