--- a/cheatsheets/zsh.html
+++ b/cheatsheets/zsh.html
@@ -1,128 +1,128 @@
 <table>
   <caption>Insert Mode</caption>
   <tr>
-    <td>CTRL-Q</td>
+    <td>⌃-Q</td>
     <td>Quoted insert</td>
   </tr>
   <tr>
-    <td>CTRL-W</td>
+    <td>⌃-W</td>
     <td>Delete previous word</td>
   </tr>
   <tr>
-    <td>CTRL-E</td>
+    <td>⌃-E</td>
     <td>Go to end of line</td>
   </tr>
   <tr>
-    <td>CTRL-R</td>
+    <td>⌃-R</td>
     <td>Regex history search backwards</td>
   </tr>
   <tr>
-    <td>CTRL-T</td>
+    <td>⌃-T</td>
     <td>Set mark</td>
   </tr>
   <tr>
-    <td>CTRL-Y</td>
+    <td>⌃-Y</td>
     <td>Copy the region from the cursor to the mark to the clipboard</td>
   </tr>
   <tr>
-    <td>CTRL-U</td>
+    <td>⌃-U</td>
     <td>Delete from cursor to the beginning of line</td>
   </tr>
   <tr>
-    <td>CTRL-I</td>
+    <td>⌃-I</td>
     <td>Alias to TAB</td>
   </tr>
   <tr>
-    <td>CTRL-O</td>
+    <td>⌃-O</td>
     <td>Delete from cursor to the end of line</td>
   </tr>
   <tr>
-    <td>CTRL-P</td>
+    <td>⌃-P</td>
     <td>TODO</td>
   </tr>
   <tr>
-    <td>CTRL-[</td>
+    <td>⌃-[</td>
     <td>Alias to ESC</td>
   </tr>
   <tr>
-    <td>CTRL-]</td>
+    <td>⌃-]</td>
     <td>TODO</td>
   </tr>
   <tr>
-    <td>CTRL-\</td>
+    <td>⌃-\</td>
     <td>TODO</td>
   </tr>
   <tr>
-    <td>CTRL-A</td>
+    <td>⌃-A</td>
     <td>Go to beginning of line</td>
   </tr>
   <tr>
-    <td>CTRL-S</td>
+    <td>⌃-S</td>
     <td>Regex history search forwards</td>
   </tr>
   <tr>
-    <td>CTRL-D</td>
+    <td>⌃-D</td>
     <td>Delete next word</td>
   </tr>
   <tr>
-    <td>CTRL-F</td>
+    <td>⌃-F</td>
     <td>Go up in history</td>
   </tr>
   <tr>
-    <td>CTRL-G</td>
+    <td>⌃-G</td>
     <td>Go down in history</td>
   </tr>
   <tr>
-    <td>CTRL-H</td>
+    <td>⌃-H</td>
     <td>Move one word left</td>
   </tr>
   <tr>
-    <td>CTRL-J</td>
+    <td>⌃-J</td>
     <td>Move one character left</td>
   </tr>
   <tr>
-    <td>CTRL-K</td>
+    <td>⌃-K</td>
     <td>Move one character right</td>
   </tr>
   <tr>
-    <td>CTRL-L</td>
+    <td>⌃-L</td>
     <td>Move one word right</td>
   </tr>
   <tr>
-    <td>CTRL-Z</td>
+    <td>⌃-Z</td>
     <td>tmux prefix key</td>
   </tr>
   <tr>
-    <td>CTRL-X</td>
+    <td>⌃-X</td>
     <td>Deletes the character under cursor</td>
   </tr>
   <tr>
-    <td>CTRL-C</td>
+    <td>⌃-C</td>
     <td>Send SIGINT to foreground process</td>
   </tr>
   <tr>
-    <td>CTRL-V</td>
+    <td>⌃-V</td>
     <td>Paste from clipboard</td>
   </tr>
   <tr>
-    <td>CTRL-B</td>
+    <td>⌃-B</td>
     <td>TODO</td>
   </tr>
   <tr>
-    <td>CTRL-N</td>
+    <td>⌃-N</td>
     <td>Clear screen</td>
   </tr>
   <tr>
-    <td>CTRL-M</td>
+    <td>⌃-M</td>
     <td>Alias to RETURN</td>
   </tr>
   <tr>
-    <td>CTRL-/</td>
+    <td>⌃-/</td>
     <td>Undo</td>
   </tr>
   <tr>
-    <td>CTRL-SPACE</td>
+    <td>⌃-␣</td>
     <td>Copy the current line to the clipboard</td>
   </tr>
 </table>
-
+<h4><a href="https://github.com/terryma/dotfiles/blob/master/.zshrc">https://github.com/terryma/dotfiles/blob/master/.zshrc</a></h4>
