Add slate cheatsheet

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 			<!-- <li><a href="cheatsheets/scapple.html">Scapple</a></li> -->
                         <li><a href="cheatsheets/zsh.html">zsh</a></li>
                         <li><a href="cheatsheets/tmux.html">tmux</a></li>
+                        <li><a href="cheatsheets/slate.html">slate</a></li>
 		</ul>
 		<div id="container"></div>
 	</div>
