--- a/cheatsheets/zsh.html
+++ b/cheatsheets/zsh.html
@@ -1,6 +1,10 @@
 <table>
   <caption>Insert Mode</caption>
   <tr>
+    <th>Shortcut</th>
+    <th>Description</th>
+  </tr>
+  <tr>
     <td>⌃-Q</td>
     <td>Quoted insert</td>
   </tr>
