Add aliases for git, update slate

--- a/cheatsheets/slate.html
+++ b/cheatsheets/slate.html
@@ -26,8 +26,12 @@
     <td>Relaunch slate</td>
   </tr>
   <tr>
-    <td>⇪-␣</td>
+    <td>⇪-F</td>
     <td>Full screen</td>
+  </tr>
+  <tr>
+    <td>⇪-⏎</td>
+    <td>Restore screen (Chrome on left, iTerm on right, focus on Vim journal within tmux)</td>
   </tr>
   <tr>
     <td>⇪-B</td>
