--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
 			<!-- <li><a href="cheatsheets/gmail.html">GMail</a></li> -->
 			<!-- <li><a href="cheatsheets/vim.html">Vim</a></li> -->
 			<!-- <li><a href="cheatsheets/alfred.html">Alfred</a></li> -->
-			<!-- <li><a href="cheatsheets/git.html">Git</a></li> -->
-			<!-- <li><a href="cheatsheets/git-advanced.html">Git</a></li> -->
+                        <!-- <li><a href="cheatsheets/git-advanced.html">Git</a></li> -->
 			<!-- <li><a href="cheatsheets/towergit.html">Git</a></li> -->
 			<!-- <li><a href="cheatsheets/bashhistory.html">Bash History</a></li> -->
 			<!-- <li><a href="cheatsheets/jira.html">Jira</a></li> -->
 			<!-- <li><a href="cheatsheets/subl.html">Sublime</a></li> -->
 			<!-- <li><a href="cheatsheets/subl2.html">ST2</a></li> -->
 			<!-- <li><a href="cheatsheets/scapple.html">Scapple</a></li> -->
-                        <li><a href="cheatsheets/zsh.html">zsh</a></li>
-                        <li><a href="cheatsheets/tmux.html">tmux</a></li>
+                        <li><a href="cheatsheets/git.html">git</a></li>
                         <li><a href="cheatsheets/slate.html">slate</a></li>
+                        <li><a href="cheatsheets/tmux.html">tmux</a></li>
+                        <li><a href="cheatsheets/zsh.html">zsh</a></li>
 		</ul>
 		<div id="container"></div>
 	</div>
