--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                         <li><a href="cheatsheets/git.html">git</a></li>
                         <li><a href="cheatsheets/slate.html">slate</a></li>
                         <li><a href="cheatsheets/tmux.html">tmux</a></li>
+                        <li><a href="cheatsheets/xcode.html">xcode</a></li>
                         <li><a href="cheatsheets/zsh.html">zsh</a></li>
 		</ul>
 		<div id="container"></div>
